tests/e2e/object_assign_null4.story
function foo a: object
    a = null

foo(a: (gmaps geocode address: "foobar"))
